# python-monorepo

./: .gitignore  README.md  docker-compose.yml
services/api/: Dockerfile  pyproject.toml
services/api/src/: server.py
