[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Wilson Anciro <konekred@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
core = "0.1.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
core = {path = "./packages/core", develop = true}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
